--- a/gui/windows/mainWindowUi.ui
+++ b/gui/windows/mainWindowUi.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>773</width>
-    <height>492</height>
+    <width>300</width>
+    <height>350</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>300</width>
+    <height>350</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>300</width>
+    <height>350</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -20,7 +32,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>773</width>
+     <width>300</width>
      <height>21</height>
     </rect>
    </property>
@@ -39,14 +51,8 @@
     </property>
     <addaction name="actionSettings"/>
    </widget>
-   <widget class="QMenu" name="menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
-   </widget>
    <addaction name="menuFiles"/>
    <addaction name="menuEdit"/>
-   <addaction name="menuHelp"/>
   </widget>
   <action name="actionNew">
    <property name="text">
